# langgraph-academy

./: pyproject.toml
lc-academy/: pyvenv.cfg
module-0/: basics.ipynb
module-1/: agent-memory.ipynb  agent.ipynb  chain.ipynb  router.ipynb
module-1/studio/: agent.py  router.py  simple.py
module-1/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
module-2/: state-schema.ipynb
