[project]
name = "lc-academy"
version = "0.1.0"
dependencies = [
  "langchain-community>=0.3.27",
  "langchain-core>=0.3.74",
  "langchain-openai>=0.3.31",
  "langgraph-checkpoint-sqlite>=2.0.11",
  "langgraph-cli[inmem]>=0.3.8",
  "langgraph-prebuilt>=0.6.4",
  "langgraph-sdk>=0.2.3",
  "langgraph>=0.6.6",
  "langsmith>=0.4.16",
  "notebook>=7.4.5",
  "python-dotenv>=1.1.1",
  "tavily-python>=0.7.11",
  "trustcall>=0.0.39",
  "wikipedia>=1.4.0",
]
